--- a/css/style.css
+++ b/css/style.css
@@ -1,149 +1,371 @@
-:root {
-    --primary: #ddd;
-    --dark: #333;
-    --light: #fff;
-    --shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
-}
-
-html {
-    box-sizing: border-box;
-    font-family: sans-serif;
-    color: var(--dark);
-}
-
-body {
-    background: #ccc;
-    margin: 30px 50px;
-    line-height: 1.4;
-}
-
-.btn {
-    background-color: var(--dark);
-    color: var(--light);
-    padding: 0.6rem 1.3rem;
-    text-decoration: none;
-    border: 0;
-}
-
-img {
-    max-width: 100%;
-}
-
-.container {
-    display: grid;
-    grid-gap: 20px;
-}
-
-.main-nav ul {
-    display: grid;
-    grid-gap: 20px;
+* {
+    margin: 0;
     padding: 0;
-    list-style: none;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 }
-
-.main-nav a {
-    background: var(--primary);
-    display: block;
-    text-decoration: none;
-    padding: 0.8rem;
-    text-align: center;
-    color: var(--dark);
-    text-transform: uppercase;
-    font-size: 1.1rem;
-    box-shadow: var(--shadow);
-}
-
-.main-nav a:hover {
-    background: var(--dark);
-    color: var(--light);
-}
-
-.top-container {
-    display: grid;
-    grid-gap: 20px;
-    grid-template-areas: 'showcase showcase top-box-a' 'showcase showcase top-box-b';
-}
-
-.showcase {
-    grid-area: showcase;
-    min-height: 400px;
-    background: gray;
-    background-repeat: no-repeat;
-    background-size: cover;
+.header {
+    min-height: 100vh;
+    width: 100%;
+    background-image: url(../images/bg.png);
     background-position: center;
-    padding: 3rem;
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    justify-content: center;
-    box-shadow: var(--shadow);
-}
+    background-size: cover;
+    position: relative;
 
-.showcase h1 {
-    font-size: 4rem;
-    margin-bottom: 0;
-    color: var(--light);
-}
 
-.showcase p {
-    font-size: 1.3rem;
-    margin-top: 0;
-    color: var(--light);
 }
-
-.top-box {
-    background: var(--primary);
-    display: grid;
-    align-items: center;
-    justify-items: center;
-    box-shadow: var(--shadow);
-    padding: 1.5rem;
+nav {
+    margin: 0 auto;
+    width: 900px;
 }
-
-.info {
-    background: var(--primary);
-    box-shadow: var(--shadow);
-    display: grid;
-    grid-gap: 30px;
-    grid-template-columns: repeat(2, 1fr);
-    padding: 3rem;
+.nav-links ul{
+    list-style: none;
+    padding: 25px;
 }
-
-footer {
-    margin-top: 2rem;
-    background: var(--dark);
-    color: var(--light);
+.nav-links ul li{
+    display: inline-block;
+}
+.nav-links ul li a{
+    color: #fff;
+    text-decoration: none;
+    display: block;
+    padding: 40px 10px;
+}
+.logo{
+    width: 300px;
+    height: 300px;
+    position: absolute;
+    left: 45%;
+    top: 0;
+    content: "";
+}
+.icon{
+    width: 500px;
+    height: 300px;
+    position: absolute;
+    left: 70%;
+    top: 0;
+    content: "";
+}
+.top-container {
+    width: 90%;
+    color: #fff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
     text-align: center;
-    padding: 1rem;
+}
+.top-container h2{
+    font-size: 62px;
+}
+.top-container p{
+    margin: 10px 0 40px;
+    font-size: 20px;
+    color: #fff;
+}
+@media(max-width: 700){
+    .top-container h2{
+        font-size: 20px;
+    }
+    .nav-links ul li{
+        display: block;
+    }
+    .nav-links{
+        position: absolute;
+        background: #fff;
+        height: 100vh;
+        width: 200px;
+        top: 0;
+        right: 0;
+        text-align: left;
+        z-index: 2;
+        
+    }
+}
+.first-btn {
+    background-color: #2091F9;
+    color: white;
+    padding: 10px 40px;
+    margin-top: 200px;
+    text-decoration: none;
+    border-radius: 400px;
+    width: 100%;
+}
+.first-btn:hover{
+    background: #fff;
+    transition: 1s;
+}
+.boxes{
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top: 100px;
+}
+.boxes h5{
+    line-height: 22px;
+}
+.info {
+    margin-top: 5%;
+    display: flex;
+    justify-content: space-between;
+}
+.info1{
+    flex-basis: 31%;
+    margin-bottom: 5%;
+    padding: 20px 12px;
+}
+.top-boxb {
+    margin-left: 20%;
+    margin-top: 100px;
+}
+.second-btn {
+    background-color: #2091F9;
+    color: white;
+    padding: 10px 40px;
+    margin-top: 100px;
+    text-decoration: none;
+    border-radius: 400px;
+}
+.second-btn:hover {
+    background: #fff;
+    transition: 1s;
+}
+ .first{
+     position: relative;
+     top: 0;
+     left: 0;
+ } 
+ .second{
+     position: absolute;
+     top: 1500px;
+     left: 450px;
+ }
+.bottom-container {
+    display: flex;
+    margin-top: 100px;
+}
+.bottom {
+    flex: 1;
+}
+.new-one {
+    margin-left: 30px;
+    line-height: 32px;
+    margin-bottom: 30px;
+}
+.third-btn {
+    background-color: white;
+    color: black;
+    padding: 10px 80px;
+    margin-top: 100px;
+    text-decoration: none;
+    border-radius: 400px;
+    text-align: left;
+}
+.third-btn:hover{
+    background: #2091F9;
+    transition: 1s;
+}
+.fourth-btn {
+    background-color: #2091F9;
+    color: white;
+    padding: 0.8rem 1.3rem;
+    margin-top: 100px;
+    text-decoration: none;
+    border-radius: 400px;
+}
+.fourth-btn:hover{
+    background: #fff;
+    transition: 1s;
+}
+.portfolio {
+    text-align: center;
+}
+.row {
+    display: flex;
+    flex-wrap: wrap;
+  
+}
+.column {
+    border: 2px solid gray;
+    flex-basis: 20%;
+    margin-top: 1px;
+    margin-bottom: 1px;
+    padding: 0 20px;
+}
+.partner-button{
+    text-align: center;
+}
+.fifth-btn {
+    background-color: #2091F9;
+    color: white;
+    padding: 10px 60px;
+    margin-top: 200px;
+    text-decoration: none;
+    text-align: center;
+    border-radius: 400px;
+}
+.fifth-btn:hover{
+    background: #fff;
+    transition: 1s;
+}
+.testimonials {
+    text-align: center;
+    margin-top: 100px;
+}
+img {
+    margin-top: 30px;
+}
+.sixth-btn {
+    background-color: #2091F9;
+    color: white;
+    padding: 10px 50px;
+    margin-top: 100px;
+    text-decoration: none;
+    text-align: center;
+    border-radius: 400px;
+}
+.sixth-btn:hover{
+    background: #fff;
+    transition: 1s;
+}
+.bottom-box {
+    text-align: center;
+    background: #252B42;
+    background-size: auto;
+    margin-top: 100px;
+    font-size: 16pt;
+}
+.price{
+    color: #fff;
+}
+.bottom-boxes {
+    margin-top: 50px;
+}
+.bottom-box1 {
+    display: inline-block;
+    border-radius: 10px;
+    width: 250px;
+    height: 500px;
+    border-spacing: 20px;
+    background-color: white;
+    font-size: 16pt;
+    line-height: 40px;
+}
+.bottom-box1:hover {
+    background-color: #2091F9;
+    color: #fff;
+    transform: scale(1.1);
+}
+.seventh-btn {
+    background-color: #2091F9;
+    color: white;
+    padding: 10px 50px;
+    margin-top: 10px;
+    text-decoration: none;
+    border-radius: 300px;
+}
+.seventh-btn:hover {
+    background: #fff;
+    transition: 1s;
+}
+.header-one {
+    text-align: center;
+    margin-top: 100px;
+}
+.box-one {
+    display: grid;
+    grid-gap: 10px;
+    background: #fff;
+    box-shadow: gray;
+    width: 200px;
+    margin-left: 50px;
+    margin-top: 50px;
+}
+.flex-container {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    grid-column-gap: 200px;
+    padding: 100px;
+}
+.box-one {
+    width: 300px;
+  border: 2px solid whitesmoke;
+  padding: 50px;
+  margin: 20px;
+  border-radius: 15px;
+
+}
+.box-two {
+    margin-right: 20px;
+}
+.box-two1{
+    display: flex;
+}
+.eight-btn {
+    background-color: whitesmoke;
+    color: black;
+    padding: 10px 70px;
+    margin-top: 20px;
+    text-decoration: none;
+    border-radius: 400px;
+}
+.eight-btn:hover{
+    background: #fff;
+    transition: 1s;
+}
+.ten-btn {
+    background-color: whitesmoke;
+    border: none;
+    color: black;
+    padding: 30px 50px;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+.ten-btn:hover{
+    background: #fff;
+    transition: 1s;
+}
+.eleven-btn {
+    background-color: #2091F9;
+    color: white;
+    padding: 0.8rem 1.3rem;
+    margin-top: 100px;
+    text-decoration: none;
+    border-radius: 400px;
+}
+.eleven-btn:hover{
+    background: #fff;
+    transition: 1s;
+}
+footer {
+    background: #252B42;
+    margin-top: 100px;
+}
+table {
+    border-collapse: collapse;
+    border-spacing: 20px 0;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+}
+th {
+    color: #fff;
+}
+th, td {
+    width: 200px;
+    text-align: center;
+    border: none;
+    padding: 5px;
+    color: #fff;
 }
 
 @media (max-width: 700px) {
-    .top-container {
-        grid-template-areas: 'showcase showcase' 'top-box-a top-box-b';
+    .first-header h2{
+        font-size: 30px;
     }
-    .showcase h1 {
-        font-size: 2.5rem;
-    }
-    .main-nav ul {
-        grid-template-columns: 1fr;
-    }
-    .info {
-        grid-template-columns: 1fr;
-    }
-    .info .btn {
-        display: block;
-        text-align: center;
-        margin: auto;
+    .first-header p {
+        font-size: 10px;
     }
 }
-
-@media (max-width: 500px) {
-    .top-container{
-        grid-template-areas: 'showcase' 'top-box-a' 'top-box-b';
-    }
-}
-
-
-
-
